Bug 1702600 - Change ToInteger to ToInteger64 in ClientUsageArray::Deserialize; r=#dom-storage a=pascalc

We use uint64_t for usages internally, but the deserializing function was using
ToInteger which can handle only 32bit integers. The problem became more visible
after increasing the group limit from 2GB to 10GB, but it was possible to
experience the problem even before that because persisted origins are not
limited by the group limit.